plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'io.devnindo.devnindo-schemagen' version '0.9.17'
    id 'signing'
}

group = "io.devnindo.core"
version = "0.9.8"

sourceSets.main.java.srcDirs = ['build/classes/java/main','src/main/java']

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams true
    }
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
sourceCompatibility = JavaVersion.VERSION_11

java {
    withJavadocJar()
    withSourcesJar()
}

apply from: 'publish.gradle'


dependencies {

    implementation 'com.google.dagger:dagger:2.45'
    annotationProcessor('com.google.dagger:dagger-compiler:2.45')
    implementation  group: 'io.github.classgraph', name: 'classgraph', version: '4.8.149'

    api('io.devnindo.core:devnindo-datatype:0.9.8') {changing = true}
    api 'io.vertx:vertx-rx-java3:4.4.0'
    api 'io.vertx:vertx-core:4.4.0'

    implementation 'io.vertx:vertx-web:4.4.0'
    implementation 'io.vertx:vertx-web-client:4.4.0'

    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.junit.jupiter:junit-jupiter:5.9.2'

}